[package]
name = "ruwabar"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.7.0"
bytemuck = "1.21.0"
memfd = "0.6.4"
memmap2 = "0.9.5"
tempfile = "3.15.0"
wayland-backend = "0.3.7"
wayland-client = "0.31.7"
wayland-protocols = { version = "0.32.5", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3.5", features = ["client"] }
wayland-scanner = "0.31.5"
